site/docs/v0.4.1/zh/components/progress.mdx
# 进度

进度条表示有明确起点与终点的任务完成程度，并在可能时提供可读的当前值。

<Preview class="w-full max-w-sm">
<div class="grid w-full gap-3" data-progress-primary-demo="zh">
  <p class="text-sm text-muted-foreground" data-progress-status aria-live="polite">已完成 66%</p>
  <div id="progress-demo" class="progress" role="progressbar" aria-label="加载进度" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" data-progress-bar>
    <span style="width: 66%"></span>
  </div>
  <div class="flex gap-2">
    <button type="button" class="btn" data-size="sm" data-progress-action="set-100" data-preview-onclick onclick="const demo=this.closest('[data-progress-primary-demo]'); const bar=demo.querySelector('[data-progress-bar]'); const fill=bar.querySelector('span'); const status=demo.querySelector('[data-progress-status]'); bar.setAttribute('aria-valuenow','100'); fill.style.width='100%'; status.textContent='已完成 100%';">完成</button>
    <button type="button" class="btn" data-size="sm" data-variant="outline" data-progress-action="set-0" data-preview-onclick onclick="const demo=this.closest('[data-progress-primary-demo]'); const bar=demo.querySelector('[data-progress-bar]'); const fill=bar.querySelector('span'); const status=demo.querySelector('[data-progress-status]'); bar.setAttribute('aria-valuenow','0'); fill.style.width='0%'; status.textContent='已完成 0%';">重置</button>
  </div>
</div>
</Preview>

## 用法

<Steps>
  <Step title="引入 CSS">

导入 Tailwind 和一个完整的 A3S UI 样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/a3s.css";
```

或者只导入基本CSS、细节组件CSS和一个样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/base.css";
@import "@a3s-lab/ui/components/progress.css";
@import "@a3s-lab/ui/styles/a3s.css";
```

使用CDN或批量程序导入？请参见[安装页](/installation)。

  </Step>
  <Step title="添加进度条 HTML">

Add `class="progress"` and `role="progressbar"` to the root. Use one child `<span>` as the visual indicator.

```html
<div class="progress" role="progressbar" aria-label="Loading" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">
  <span style="width: 66%"></span>
</div>
```

  </Step>
</Steps>

### HTML 结构

<dl>
  <dt><code>&lt;div class="progress" role="progressbar"&gt;</code></dt>
  <dd>Progress root. Set <code>aria-label</code> or <code>aria-labelledby</code>, plus <code>aria-valuenow</code>, <code>aria-valuemin</code>, and <code>aria-valuemax</code>.</dd>
  <dt><code>&lt;span style="width: ..."&gt;</code></dt>
  <dd>Visual indicator. Its width should match the current value.</dd>
</dl>

## 示例

### 标签

<Preview class="w-full max-w-sm">
<div class="field">
  <div class="flex items-center gap-3 text-sm">
    <label id="progress-label">Upload progress</label>
    <output class="ms-auto tabular-nums">66%</output>
  </div>
  <div class="progress" role="progressbar" aria-labelledby="progress-label" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">
    <span style="width: 66%"></span>
  </div>
</div>
</Preview>

### RTL

进展在根或父级上支持`dir="rtl"`。

<Preview class="w-full max-w-sm">
<div class="field w-full" dir="rtl">
  <label id="progress-upload-rtl" for="progress-upload">تقدم الرفع <span class="ms-auto">٦٦%</span></label>
  <div id="progress-upload" class="progress" role="progressbar" aria-labelledby="progress-upload-rtl" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">
    <span style="width: 66%"></span>
  </div>
</div>
</Preview>

## React

```tsx
import { Progress } from "@a3s-lab/ui/react";

export function Example() {
  return (
    <Progress aria-label="Loading" aria-valuenow="66">
      <span style={{ width: "66%" }}></span>
    </Progress>
  );
}
```

适配器只替换指南中已记录的语义根元素，不增加包装层；内部标记继续使用上方 HTML 契约。

## Vue

```vue
<script setup lang="ts">
import { Progress } from "@a3s-lab/ui/vue";
</script>

<template>
  <Progress aria-label="Loading" aria-valuenow="66">
    <span style="width: 66%"></span>
  </Progress>
</template>
```

适配器只替换指南中已记录的语义根元素，不增加包装层；内部标记继续使用上方 HTML 契约。
